# imvs

./: README.md
api/src/: app.py  data_models.py  dirs.py  segmentor.py
model/: main.py  requirements.txt  utils.py
model/imvs/engine/: imvs.py  params.yaml  sma.py  vmt.py
user-interfaces/ohif-fork/: Dockerfile  Dockerfile_Custom  build_and_push.sh  nginx.conf
user-interfaces/ohif-fork/platform/app/public/config/: default.js
user-interfaces/ohif-fork/platform/app/public/html-templates/: index.html
user-interfaces/ohif-fork/platform/docs/: tailwind.config.js
user-interfaces/ohif-fork/platform/ui/: tailwind.config.js
user-interfaces/ohif-fork/platform/ui-next/: tailwind.config.js
user-interfaces/ohif-fork/platform/ui/src/components/Header/: Header.tsx
user-interfaces/slicer-extension/InteractiveSegmentation/: CMakeLists.txt
user-interfaces/slicer-extension/InteractiveSegmentation/InteractiveSegmentation/: CMakeLists.txt  InteractiveSegmentation.py
user-interfaces/slicer-extension/InteractiveSegmentation/InteractiveSegmentation/InteractiveSegmentationCore/: InteractiveSegmentationLogic.py  InteractiveSegmentationTest.py  InteractiveSegmentationWidget.py  utils.py
user-interfaces/slicer-extension/InteractiveSegmentation/InteractiveSegmentation/InteractiveSegmentationLib/: InteractiveModelTrainingAPIClient.py  MaskRefinerAPIClient.py  utils.py
user-interfaces/slicer-extension/InteractiveSegmentation/InteractiveSegmentation/Resources/UI/: InteractiveSegmentation.ui
(+1 files in other folders)
